--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -2,6 +2,9 @@ $color-black: #000000;
 $color-black-text: #595959;
 $color-teal: #5DAD93;
 $color-white: #FFFFFF;
+$color-button-background: #FAF9F7;
+$color-ordered: #2FC594;
+$color-footer-text: #919EAB;
 
 $font-Poppins-Regular: 400 16px Poppins, sans-serif;
 $font-Poppins-Medium: 500 16px Poppins, sans-serif;
@@ -12,7 +15,8 @@ $font-Soleil: 400 16px Soleil, sans-serif;
   border-bottom: 1px solid #E5E5E5;
   display: flex;
   padding-left: 40px;
-  width: 100vw;
+  height: 70px;
+  width: 1024px;
 
   h1 {
     color: $color-teal;
@@ -40,35 +44,80 @@ $font-Soleil: 400 16px Soleil, sans-serif;
   }
 }
 
-.MenuItem_container {
-  background: $color-white;
-  display: flex;
-
-}
-
 footer {
   display: flex;
   max-height: 50px;
+  width: 1024px;
 
   .footer_nav {
-    flex-direction: column;
-    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
   }
 
   a {
-    padding: 15px;
     text-decoration: none;
+  }
+
+}
+
+.footer_left_container {
+  margin-left: 40px;
+}
+
+.footer_nav_child_div {
+  display: flex;
+  flex-direction: column;
+
+  a {
+    font: $font-Poppins-SemiBold;
+    color: $color-black-text;
+    font-size: 12px;
+    line-height: 39px;
+  }
+
+  a:hover {
+    opacity: .7;
+  }
+
+  h3 {
+    color: $color-teal;
+    font: $font-Poppins-SemiBold;
+    margin: 0;
+    padding: 15px 0;
+  }
+}
+
+.footer_left_container {
+  h3 {
+    font: $font-Poppins-Medium;
+    font-size: 16px;
+    color: $color-black-text;
+    letter-spacing: 0;
+    height: 46px;
+    width: 378px;
+  }
+
+  h5 {
+    color: $color-footer-text;
+    font: $font-Poppins-SemiBold;
+    font-size: 12px;
+    letter-spacing: 0;
   }
 }
 
 .social_ul {
   display: flex;
   list-style: none;
+  margin: 0;
+  padding: 0;
 
   li {
     padding: 0 7.5px;
 
     img {
+      height: 30px;
       width: 30px;
     }
   }
