Start Cart Slider

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -42,6 +42,7 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     background: transparent;
     border: 0;
     color: $color-black-text;
+    cursor: pointer;
     display: flex;
     font: $font-Poppins-Medium;
     font-size: 12px;
