--- a/src/components/MenuItem/menuItemStyles.scss
+++ b/src/components/MenuItem/menuItemStyles.scss
@@ -63,11 +63,13 @@
   cursor: pointer;
   font: $font-Poppins-SemiBold;
   font-size: 12px;
+  padding-left: 0;
   text-transform: capitalize;
 }
 
 .MenuItem_text {
   padding-left: 20px;
+  padding-right: 20px;
 
   h2 {
     color: $color-teal;
