--- a/src/components/Cart/cartStyles.scss
+++ b/src/components/Cart/cartStyles.scss
@@ -5,7 +5,7 @@
   left: 0;
   top: 0;
   transform: translate3d(-100vw, 0, 0);
-  transition: transform .3s cubic-bezier(0, .52, 0, 1);
+  transition: transform 0.3s cubic-bezier(0, 0.52, 0, 1);
   width: 100vw;
   height: 100vh;
 }
@@ -15,15 +15,15 @@
   left: 0;
   top: 0;
   transform: translate3d(0vw, 0, 0);
-  transition: transform .3s cubic-bezier(0, .52, 0, 1);
+  transition: transform 0.3s cubic-bezier(0, 0.52, 0, 1);
   width: 100vw;
   height: 100vh;
 }
 
 .cart_background {
   background-color: lightgrey;
-  opacity: .7;
   height: 100vh;
+  opacity: 0.7;
   width: 75vw;
 }
 
