Cart has totals and slides in

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,5 +1,6 @@
 $color-black: #000000;
 $color-black-text: #595959;
+$color-gray: #999999;
 $color-teal: #5dad93;
 $color-white: #ffffff;
 $color-button-background: #faf9f7;
