--- a/src/components/Cart/cartStyles.scss
+++ b/src/components/Cart/cartStyles.scss
@@ -4,7 +4,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  transform: translate3d(-100vw, 0, 0);
+  transform: translate3d(+100vw, 0, 0);
   transition: transform 0.3s cubic-bezier(0, 0.52, 0, 1);
   width: 100vw;
   height: 100vh;
@@ -45,7 +45,7 @@
     font-size: 24px;
     letter-spacing: 0;
   }
-  button {
+  .cart_checkout_btn {
     background-color: $color-teal;
     border: none;
     border-radius: 4px;
@@ -70,4 +70,55 @@
     letter-spacing: 0;
     text-align: center;
   }
+}
+
+.cartItem_container {
+  display: flex;
+  margin-bottom: 10px;
+  img {
+    border-radius: 4px;
+    height: 58px;
+    width: 80px;
+  }
+}
+
+.cartItem_text {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
+
+  h2 {
+    color: $color-teal;
+    font: $font-Poppins-SemiBold;
+    font-size: 16px;
+    margin: 0;
+    text-transform: capitalize;
+  }
+  h3 {
+    color: $color-black-text;
+    font: $font-Poppins-SemiBold;
+    font-size: 12px;
+    margin: 0;
+    text-transform: capitalize;
+  }
+  .cartItem_btn {
+    background-color: transparent;
+    border: none;
+    color: $color-gray;
+    cursor: pointer;
+    font: $font-Poppins-Medium;
+    font-size: 10px;
+    letter-spacing: 0;
+    padding: 0;
+    text-align: left;
+    text-decoration-line: underline;
+  }
+}
+
+.cartItem_item_total {
+  color: $color-black-text;
+  font: $font-Poppins-SemiBold;
+  font-size: 12px;
+  letter-spacing: 0;
+  margin-left: auto;
 }
