--- a/src/components/Cart/cartStyles.scss
+++ b/src/components/Cart/cartStyles.scss
@@ -21,7 +21,7 @@
 }
 
 .cart_background {
-  background-color: lightgrey;
+  background-color: $color-light-gray;
   height: 100vh;
   opacity: 0.7;
   width: 100vw;
@@ -35,7 +35,8 @@
 }
 
 .cart_slider {
-  background: white;
+  background: $color-white;
+  box-shadow: -3px 0px 2px $color-light-gray;
   display: flex;
   flex-direction: column;
   padding: 0 30px;
