--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -37,22 +37,26 @@ $font-Soleil: 400 16px Soleil, sans-serif;
       margin: 0 10px;
       text-transform: uppercase;
     }
+
     a {
       color: $color-black-text;
       text-decoration: none;
+
       &:hover {
-        opacity: 0.7;
+        opacity: .7;
       }
     }
     @media only screen and (max-width: 640px) {
       a {
         display: none;
       }
+
       #pipe_separator {
         display: none;
       }
     }
   }
+
   .cart_button {
     background: transparent;
     border: 0;
@@ -65,6 +69,7 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     position: relative;
     text-transform: uppercase;
     justify-content: center;
+
     .cart_count {
       background: $color-teal-bright;
       border-radius: 25px;
@@ -81,15 +86,20 @@ $font-Soleil: 400 16px Soleil, sans-serif;
       width: 20px;
       z-index: 2;
     }
+
     &:hover {
-      opacity: 0.7;
+      opacity: .7;
     }
   }
 
-  &.logo {
-    height: 50px;
+  .logo {
+    height: 35px;
     justify-content: flex-start;
+    margin-top: 18px;
+    text-decoration-line: none;
+    width: 147px;
   }
+
 }
 
 .cart_image {
@@ -105,51 +115,44 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     display: flex;
     justify-content: space-evenly;
     list-style: none;
+
     li {
       font: $font-Poppins-Medium;
       font-size: 12px;
       margin: 0 10px;
       text-transform: uppercase;
     }
+
     a {
       color: $color-black-text;
       padding-bottom: 5px;
       border-bottom: solid 2px;
       border-color: transparent;
       text-decoration: none;
+
       &:hover {
-        opacity: 0.7;
+        opacity: .7;
       }
     }
   }
 }
 
 //Footer
-footer {
+.footer_container {
   display: flex;
+  justify-content: space-around;
   margin: 0 auto;
   max-height: 50px;
   max-width: 1024px;
   width: 100%;
-  .footer_nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-  }
 
   a {
     text-decoration: none;
   }
   @media only screen and (max-width: 640px) {
-    .footer_nav {
-      // flex-direction: column;
-    }
+    flex-direction: column-reverse;
+    max-height: 100%;
   }
-}
-
-.footer_left_container {
-  margin-left: 40px;
 }
 
 .footer_nav_child_div {
@@ -164,7 +167,7 @@ footer {
   }
 
   a:hover {
-    opacity: 0.7;
+    opacity: .7;
   }
 
   h3 {
@@ -191,20 +194,38 @@ footer {
     font-size: 12px;
     letter-spacing: 0;
   }
-}
 
-.social_ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  .social_ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
-  li {
-    padding: 0 7.5px;
+    li {
+      padding: 0 7.5px;
 
-    img {
-      height: 30px;
-      width: 30px;
+      img {
+        height: 30px;
+        width: 30px;
+      }
+
+      a:hover {
+        opacity: .7;
+      }
     }
   }
+  @media only screen and (max-width: 640px) {
+    h5 {
+      text-align: center;
+    }
+
+    .social_ul {
+      margin: 0 25px;
+      justify-content: space-evenly;
+    }
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+  }
+
 }
