--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -43,7 +43,7 @@ $font-Soleil: 400 16px Soleil, sans-serif;
       text-decoration: none;
 
       &:hover {
-        opacity: .7;
+        opacity: 0.7;
       }
     }
     @media only screen and (max-width: 640px) {
@@ -88,7 +88,14 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     }
 
     &:hover {
-      opacity: .7;
+      opacity: 0.7;
+    }
+
+    @media only screen and (max-width: 640px) {
+      ul {
+        margin: 0;
+        padding: 0px;
+      }
     }
   }
 
@@ -99,7 +106,6 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     text-decoration-line: none;
     width: 147px;
   }
-
 }
 
 .cart_image {
@@ -111,29 +117,40 @@ $font-Soleil: 400 16px Soleil, sans-serif;
 
 .header_nav_mobile_ul {
   display: none;
+
   @media only screen and (max-width: 640px) {
     display: flex;
     justify-content: space-evenly;
     list-style: none;
-
+    padding: 0;
     li {
       font: $font-Poppins-Medium;
       font-size: 12px;
-      margin: 0 10px;
+      margin: 0;
+      text-align: center;
       text-transform: uppercase;
+      width: 100%;
     }
 
     a {
       color: $color-black-text;
-      padding-bottom: 5px;
+      display: block;
       border-bottom: solid 2px;
       border-color: transparent;
+      padding-bottom: 5px;
+      text-align: center;
       text-decoration: none;
-
+      width: 100%;
       &:hover {
-        opacity: .7;
+        opacity: 0.7;
       }
     }
+    a.active {
+      border-color: #2fc594;
+    }
+  }
+  @media only screen and (max-width: 500px) {
+    padding: 0px;
   }
 }
 
@@ -152,6 +169,7 @@ $font-Soleil: 400 16px Soleil, sans-serif;
   @media only screen and (max-width: 640px) {
     flex-direction: column-reverse;
     max-height: 100%;
+    max-width: 100vw;
   }
 }
 
@@ -167,7 +185,7 @@ $font-Soleil: 400 16px Soleil, sans-serif;
   }
 
   a:hover {
-    opacity: .7;
+    opacity: 0.7;
   }
 
   h3 {
@@ -175,6 +193,14 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     font: $font-Poppins-SemiBold;
     margin: 0;
     padding: 15px 0;
+  }
+  @media only screen and (max-width: 640px) {
+    a {
+      margin-left: 15px;
+    }
+    h3 {
+      margin-left: 10px;
+    }
   }
 }
 
@@ -210,13 +236,19 @@ $font-Soleil: 400 16px Soleil, sans-serif;
       }
 
       a:hover {
-        opacity: .7;
+        opacity: 0.7;
       }
     }
   }
   @media only screen and (max-width: 640px) {
     h5 {
       text-align: center;
+    }
+    h3 {
+      text-align: center;
+      letter-spacing: 0;
+      max-width: 90vw;
+      width: 100%;
     }
 
     .social_ul {
@@ -227,5 +259,4 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     text-align: center;
     width: 100%;
   }
-
 }
