Small tweaks on header ul

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -50,7 +50,9 @@ $font-Soleil: 400 16px Soleil, sans-serif;
       a {
         display: none;
       }
-
+      li {
+        margin: 0;
+      }
       #pipe_separator {
         display: none;
       }
