--- a/src/components/MenuItem/menuItemStyles.scss
+++ b/src/components/MenuItem/menuItemStyles.scss
@@ -47,11 +47,21 @@
     height: 160px;
     width: 220px;
   }
+
+  @media only screen and (max-width: 750px) {
+    .MenuItem_image {
+      height: 110px;
+      margin: 0 auto;
+      width: 151px;
+    }
+  }
   @media only screen and (max-width: 640px) {
     flex-direction: column;
     padding: 5px;
     .MenuItem_image {
+      height: 160px;
       margin: 0 auto;
+      width: 220px;
     }
   }
 }
@@ -92,14 +102,16 @@
     padding-right: 5px;
     width: 462px;
   }
+  @media only screen and (max-width: 950px) {
+    p {
+      width: auto;
+    }
+  }
   @media only screen and (max-width: 640px) {
     padding: 0 40px;
     h2 {
       margin-top: 5px;
       text-align: center;
-    }
-    p {
-      width: auto;
     }
   }
   @media only screen and (max-width: 500px) {
