--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -197,12 +197,7 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     padding: 15px 0;
   }
   @media only screen and (max-width: 640px) {
-    a {
-      margin-left: 15px;
-    }
-    h3 {
-      margin-left: 10px;
-    }
+    display: none;
   }
 }
 
@@ -243,16 +238,15 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     }
   }
   @media only screen and (max-width: 640px) {
-    h5 {
-      text-align: center;
-    }
     h3 {
       text-align: center;
       letter-spacing: 0;
       max-width: 90vw;
       width: 100%;
     }
-
+    h5 {
+      text-align: center;
+    }
     .social_ul {
       margin: 0 25px;
       justify-content: space-evenly;
@@ -260,5 +254,44 @@ $font-Soleil: 400 16px Soleil, sans-serif;
     margin: 0 auto;
     text-align: center;
     width: 100%;
+  }
+}
+
+.footer_nav_child_div_mobile {
+  display: none;
+  @media only screen and (max-width: 640px) {
+    display: flex;
+    flex-direction: column;
+    a {
+      font: $font-Poppins-SemiBold;
+      color: $color-black-text;
+      font-size: 12px;
+      line-height: 39px;
+      margin-left: 15px;
+    }
+    a:hover {
+      opacity: 0.7;
+    }
+    button {
+      background-color: none;
+      border: none;
+      cursor: pointer;
+      display: flex;
+      justify-content: space-between;
+      padding-right: 20px;
+      .chevron_arrow {
+        margin-top: 10px;
+      }
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+    h3 {
+      margin-left: 10px;
+      color: $color-teal;
+      font: $font-Poppins-SemiBold;
+      margin: 0;
+      padding: 15px 0;
+    }
   }
 }
