Stop cart width shrinking if emptied of all items

--- a/src/components/Cart/cartStyles.scss
+++ b/src/components/Cart/cartStyles.scss
@@ -39,6 +39,7 @@
   box-shadow: -3px 0px 2px $color-light-gray;
   display: flex;
   flex-direction: column;
+  min-width: 362px;
   padding: 0 30px;
   width: 362px;
   z-index: 5;
